Garp/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
C:\Users\ghham\ROC\Greenfoot Game\Garp
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;C:\Users\ghham\ROC\Greenfoot Game\Garp
-d
C:\Users\ghham\ROC\Greenfoot Game\Garp\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
Garp
-windowtitle
Garp
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
C:\Users\ghham\ROC\Greenfoot Game\Garp/Score.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Counter.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Explosion.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Rock.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/EndScore.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Garp.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Gnomus.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Diamond.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/GarpWorld.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Garp2.java
C:\Users\ghham\ROC\Greenfoot Game\Garp/Bomb.java
<---- end of javadoc command ---->
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Score.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Counter.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Explosion.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Rock.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\EndScore.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Garp.java...
C:\Users\ghham\ROC\Greenfoot Game\Garp\Garp.java:114: error: -> expected
            ().serObject(charsDied++);
              ^
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Gnomus.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Diamond.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\GarpWorld.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Garp2.java...
Loading source file C:\Users\ghham\ROC\Greenfoot Game\Garp\Bomb.java...
1 error
